need to fix elements positioning, a little stuck lol

--- a/css/style.css
+++ b/css/style.css
@@ -29,16 +29,36 @@ h1 {
 
 h3 {
     font-size: small;
+    display: inline;
+    margin: 40px;
+
 }
 
-.search{
+.bar{
     display: flex;
     justify-content: center;
-    align-items: flex-start;
-    
+    height: 10px; 
 }
 
 .button {
     display: flex;
     justify-content: space-around;
+}
+
+.text1 {
+    display: flex;
+    align-items: flex-start;
+    margin: 33, 3, 25, 1
+}
+
+.search {
+    display: flex;
+    justify-content: center;
+    
+}
+
+.lucky {
+    display: flex;
+    justify-content: center;
+    margin: 12px, 9px;
 }
